Add object constructor for pizza objects and an alert to check if the data contained in the created object is correct.

--- a/index.html
+++ b/index.html
@@ -24,64 +24,64 @@
         <div class="flexer">
           <h4>Protein</h4>
           <div class="form-group" id="pizza1-protein">
-            <input type="checkbox" name="pizza1-protein" value="pepperoni">
+            <input type="checkbox" name="pizza1-toppings" value="pepperoni">
             Pepperoni
             <br>
-            <input type="checkbox" name="pizza1-protein" value="sausage">
+            <input type="checkbox" name="pizza1-toppings" value="sausage">
             Sausage
             <br>
-            <input type="checkbox" name="pizza1-protein" value="shrimp">
+            <input type="checkbox" name="pizza1-toppings" value="shrimp">
             Chicken
             <br>
-            <input type="checkbox" name="pizza1-protein" value="bacon">
+            <input type="checkbox" name="pizza1-toppings" value="bacon">
             Bacon
             <br>
-            <input type="checkbox" name="pizza1-protein" value="tuna">
+            <input type="checkbox" name="pizza1-toppings" value="tuna">
             Tuna
             <br>
-            <input type="checkbox" name="pizza1-protein" value="prosciutto">
+            <input type="checkbox" name="pizza1-toppings" value="prosciutto">
             Prosciutto
             <br>
-            <input type="checkbox" name="pizza1-protein" value="tuna">
+            <input type="checkbox" name="pizza1-toppings" value="tuna">
             Ham
             <br>
-            <input type="checkbox" name="pizza1-protein" value="shrimp">
+            <input type="checkbox" name="pizza1-toppings" value="shrimp">
             Shrimp
             <br>
-            <input type="checkbox" name="pizza1-protein" value="anchovy">
+            <input type="checkbox" name="pizza1-toppings" value="anchovy">
             Anchovies
             <br>
           </div>
           <h4>Vegetables</h4>
           <div class="form-group" id="pizza1-veggie">
-            <input type="checkbox" name="pizza1-veggie" value="onion">
+            <input type="checkbox" name="pizza1-toppings" value="onion">
             Onions
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="mushroom">
+            <input type="checkbox" name="pizza1-toppings" value="mushroom">
             Mushrooms
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="jalapeno">
+            <input type="checkbox" name="pizza1-toppings" value="jalapeno">
             Jalapeños
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="green-pepper">
+            <input type="checkbox" name="pizza1-toppings" value="green-pepper">
             Green Bell Peppers
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="peperoncini">
+            <input type="checkbox" name="pizza1-toppings" value="peperoncini">
             Peperoncini
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="spinach">
+            <input type="checkbox" name="pizza1-toppings" value="spinach">
             Spinach
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="olive">
+            <input type="checkbox" name="pizza1-toppings" value="olive">
             Olives
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="broccoli">
+            <input type="checkbox" name="pizza1-toppings" value="broccoli">
             Broccoli
             <br>
-            <input type="checkbox" name="pizza1-veggie" value="garlic">
+            <input type="checkbox" name="pizza1-toppings" value="garlic">
             Garlic
             <br>
-            <input type="checkbox" name="pizza1-protein" value="basil">
+            <input type="checkbox" name="pizza1-toppings" value="basil">
             Basil
             <br>
           </div>
