Add pricer prototype method to Pizza objects that generates a price depending on its properties.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="checkbox" name="pizza1-toppings" value="sausage">
             Sausage
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="shrimp">
+            <input type="checkbox" name="pizza1-toppings" value="chicken">
             Chicken
             <br>
             <input type="checkbox" name="pizza1-toppings" value="bacon">
@@ -52,7 +52,7 @@
             Anchovies
             <br>
           </div>
-          <h4>Vegetables</h4>
+          <h4>Veggies</h4>
           <div class="form-group" id="pizza1-veggie">
             <input type="checkbox" name="pizza1-toppings" value="onion">
             Onions
