Add a results display area that tells the user what kind of pizza they created and its price, with proper grammar.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input type="checkbox" name="pizza1-toppings" value="prosciutto">
             Prosciutto
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="tuna">
+            <input type="checkbox" name="pizza1-toppings" value="ham">
             Ham
             <br>
             <input type="checkbox" name="pizza1-toppings" value="shrimp">
@@ -54,16 +54,16 @@
           </div>
           <h4>Veggies</h4>
           <div class="form-group" id="pizza1-veggie">
-            <input type="checkbox" name="pizza1-toppings" value="onion">
+            <input type="checkbox" name="pizza1-toppings" value="onions">
             Onions
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="mushroom">
+            <input type="checkbox" name="pizza1-toppings" value="mushrooms">
             Mushrooms
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="jalapeno">
+            <input type="checkbox" name="pizza1-toppings" value="jalapenos">
             Jalapeños
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="green-pepper">
+            <input type="checkbox" name="pizza1-toppings" value="green-peppers">
             Green Bell Peppers
             <br>
             <input type="checkbox" name="pizza1-toppings" value="peperoncini">
@@ -72,7 +72,7 @@
             <input type="checkbox" name="pizza1-toppings" value="spinach">
             Spinach
             <br>
-            <input type="checkbox" name="pizza1-toppings" value="olive">
+            <input type="checkbox" name="pizza1-toppings" value="olives">
             Olives
             <br>
             <input type="checkbox" name="pizza1-toppings" value="broccoli">
@@ -89,7 +89,11 @@
 
         <button type="submit" class="btn btn-primary">Make my pizza!</button>
       </form>
-    </div>
 
+      <div id="result-area">
+
+      </div>
+
+    </div>
   </body>
 </html>
