--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
       </div>
       <div id="pizza-details">
+        <h2>Your Pizza Details:</h2>
         <h3 id="pizza-size-display"></h3>
         <h3 id="pizza-toppings-display"></h3>
         <h3 id="pizza-price-display"></h3>
